--- a/source/sass/2.1_city.sass
+++ b/source/sass/2.1_city.sass
@@ -6,10 +6,10 @@
   line-height: 21px;
   text-align: center;
 
-  // background-image: url("../img/bg-triangle.svg");
-  // background-position: center -453px;
-  // background-size: cover;
-  // background-repeat: no-repeat;
+  background-image: url("../img/bg-triangle.svg");
+  background-position: center top;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-color: $bg-lightblue;
 
 .city__text
@@ -29,13 +29,16 @@
   margin-top: 17px;
 
 .city__image
-  display: block;
-  width: 100%;
+  width: 320px;
+  height: 260px;
+  background-image: url("../img/main-city-mobile@1x.jpg");
+  background-repeat: no-repeat;
 
 @media (min-width: $tablet-width)
   .city
     display: flex;
     justify-content: flex-end;
+    background-image: none;
 
   .city__text
     width: 256px;
@@ -51,9 +54,17 @@
   .city__description
     margin-top: 21px;
 
+  .city__image
+    width: 512px;
+    height: 256px;
+    background-image: url("../img/main-city-tablet@1x.jpg");
+
 @media (min-width: $desktop-width)
   .city__image
+    width: 800px;
     height: 256px;
+    background-image: url("../img/main-city-desktop@1x.jpg");
+    background-position: 0 center;
 
   .city__text
     width: 400px;
