--- a/source/sass/2.3_sight.sass
+++ b/source/sass/2.3_sight.sass
@@ -25,9 +25,10 @@
   margin-top: 17px;
 
 .sight__image
-  display: block;
-  width: 100%;
-  // min-height: 260px;
+  width: 320px;
+  height: 260px;
+  background-image: url("../img/main-bridge-mobile@1x.jpg");
+  background-repeat: no-repeat;
 
 @media (min-width: $tablet-width)
   .sight
@@ -51,11 +52,11 @@
 
   .sight__image
     order: 1;
+    width: 512px;
+    height: 256px;
+    background-image: url("../img/main-bridge-tablet@1x.jpg");
 
 @media (min-width: $desktop-width)
-  .sight__image
-    height: 256px;
-
   .sight__text
     width: 400px;
     padding-top: 53px;
@@ -72,3 +73,9 @@
 
   .sight__description
     margin-top: 21px;
+
+  .sight__image
+    width: 800px;
+    height: 256px;
+    background-image: url("../img/main-bridge-desktop@1x.jpg");
+    background-position: 0 center;
