--- a/source/sass/3.2_map.sass
+++ b/source/sass/3.2_map.sass
@@ -1,7 +1,7 @@
 .map
   box-sizing: border-box;
   width: 100%;
-  min-height: 350px;
+  height: 350px;
   background-image: url("../img/bg-map-mobile@1x.jpg")
   background-position: center center;
   background-size: cover;
