--- a/source/sass/4.2_video.sass
+++ b/source/sass/4.2_video.sass
@@ -66,6 +66,7 @@
 .video__progress-bar
   position: absolute;
   top: -45px;
+  left: 0;
   width: 280px;
   height: 45px;
   background-color: rgba(0, 0, 0, 0.6);
