--- a/source/sass/5.1_introduce.sass
+++ b/source/sass/5.1_introduce.sass
@@ -1,4 +1,5 @@
 .introduce
+  width: 100%;
   box-sizing: border-box;
   border-top: 1px solid #e5e5e5;
   padding-top: 19px;
@@ -48,6 +49,7 @@
 
 @media (min-width: $tablet-width)
   .introduce
+    width: 50%;
     border-top: none;
     padding-top: 0px;
     padding-left: 58px;
