--- a/source/sass/5.3_impression.sass
+++ b/source/sass/5.3_impression.sass
@@ -1,4 +1,5 @@
 .impression
+  width: 100%;
   box-sizing: border-box;
   border-top: 1px solid #e5e5e5;
   padding-top: 19px;
@@ -67,6 +68,7 @@
     padding-bottom: 0px;
     margin-top: 21px;
     margin-bottom: 30px;
+    width: 50%;
 
   .impression__heading
     text-align: left;
