--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -117,7 +117,7 @@ body {
 }
 
 
-/* 5. Служебныe стили "container", "visually-hidden", "clearfix"
+/* 5. Служебныe стили "container", "visually-hidden", "clearfix", "wrapper"
    ========================================================================== */
 
 .container {
@@ -160,6 +160,10 @@ body {
     clear: both;
 }
 
+.wrapper {
+  box-shadow: 0px 7px 15px 0px rgba(0,0,0,0.15);
+}
+
 /* 6. Подключение стилей блоков (БЭМ)
    ========================================================================== */
 
@@ -181,4 +185,6 @@ body {
 @import "5.4_visited-sights.sass";
 @import "5.5_emotions.sass";
 @import "5.6_sending.sass";
+@import "6.1_modal-success.sass";
+@import "6.2_modal-failure.sass";
 @import "10_footer.sass";
