--- a/source/sass/2.1_city.sass
+++ b/source/sass/2.1_city.sass
@@ -34,6 +34,11 @@
   background-image: url("../img/main-city-mobile@1x.jpg");
   background-repeat: no-repeat;
 
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx)
+  .city__image
+    background-image: url("../img/main-city-mobile@2x.jpg");
+    background-size: cover;
+
 @media (min-width: $tablet-width)
   .city
     display: flex;
@@ -59,6 +64,11 @@
     height: 256px;
     background-image: url("../img/main-city-tablet@1x.jpg");
 
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx)
+    .city__image
+      background-image: url("../img/main-city-tablet@2x.jpg");
+      background-size: cover;
+
 @media (min-width: $desktop-width)
   .city__image
     width: 800px;
@@ -76,3 +86,8 @@
   .city__heading
     padding-left: 50px;
     padding-right: 50px;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx)
+    .city__image
+      background-image: url("../img/main-city-desktop@2x.jpg");
+      background-size: cover;
