--- a/source/sass/3.2_map.sass
+++ b/source/sass/3.2_map.sass
@@ -2,15 +2,32 @@
   box-sizing: border-box;
   width: 100%;
   height: 350px;
-  background-image: url("../img/bg-map-mobile@1x.jpg")
+  background-image: url("../img/bg-map-mobile@1x.jpg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
 
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx)
+  .map
+    background-image: url("../img/bg-map-mobile@2x.jpg");
+    background-size: cover;
+
+
 @media (min-width: $tablet-width)
   .map
-    background-image: url("../img/bg-map-tablet@1x.jpg")
+    background-image: url("../img/bg-map-tablet@1x.jpg");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx)
+    .map
+      background-image: url("../img/bg-map-tablet@2x.jpg");
+      background-size: cover;
+
 
 @media (min-width: $desktop-width)
   .map
-    background-image: url("../img/bg-map-desktop@1x.jpg")
+    background-image: url("../img/bg-map-desktop@1x.jpg");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx)
+    .map
+      background-image: url("../img/bg-map-desktop@2sx.jpg");
+      background-size: cover;
