--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,11 @@ html, body, h1, h2, h3, h4, p {
   padding: 0;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 14px;
