--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,14 +28,20 @@ $retina-dppx: 1.5dppx;
 /* 2. Шрифты, главный фон, сброс некоторых отступов
    ========================================================================== */
 
-html, body, h1, h2, h3, h4, p {
-  margin: 0;
-  padding: 0;
+@font-face {
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/ptsans.woff2") format("woff2"), url("../fonts/ptsans.woff") format("woff");
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+@font-face {
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/ptsansbold.woff2") format("woff2"), url("../fonts/ptsansbold.woff") format("woff");
 }
 
 body {
@@ -44,6 +50,16 @@ body {
   color: #333;
   text-transform: uppercase;
   background-color: #f2f2f2;
+}
+
+html, body, h1, h2, h3, h4, p {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* 3. Заголовки
