--- a/source/sass/5.4_visited-sights.sass
+++ b/source/sass/5.4_visited-sights.sass
@@ -38,7 +38,8 @@
   background-color: #f2f2f2;
   background-position: center center;
 
-.visited-sights__item:hover .visited-sights__label::before
+.visited-sights__item:hover .visited-sights__label::before,
+.visited-sights__item:focus .visited-sights__label::before
   background-color: #e5e5e5;
 
 
