--- a/source/sass/1.1_navigation.sass
+++ b/source/sass/1.1_navigation.sass
@@ -5,7 +5,7 @@
   display: block;
   box-sizing: border-box;
   width: 100%;
-  height: 56px;
+  // height: 56px;
   border-top: 1px solid #9ac2db;
   border-bottom: 1px solid #678fa8;
 
