--- a/source/sass/4.2_video.sass
+++ b/source/sass/4.2_video.sass
@@ -12,6 +12,9 @@
   margin-top: 29px;
   line-height: 24px;
 
+.video__img
+  display: block;
+
 .video__player
   margin-left: auto;
   margin-right: auto;
