--- a/source/sass/5.3_impression.sass
+++ b/source/sass/5.3_impression.sass
@@ -12,8 +12,8 @@
   margin-top: 13px;
   padding-left: 20px;
 
-.impression__input
-  display: none;
+// .impression__input
+//   display: none;
 
 .impression__label
   font-weight: bold;
@@ -36,11 +36,7 @@
 .impression__input:checked + .impression__label::before
   background-color: #333333;
 
-.impression__item:hover .impression__label::before
-  background-color: #e5e5e5;
-  border-color: #e5e5e5;
-
-.impression__item:hover .impression__input:checked + .impression__label::before
+.impression__input:focus + .impression__label::before
   background-color: black;
   border-color: #e5e5e5;
 
