--- a/source/sass/5.4_visited-sights.sass
+++ b/source/sass/5.4_visited-sights.sass
@@ -29,8 +29,8 @@
   vertical-align: middle;
   background-color: #f2f2f2;
 
-.visited-sights__input
-  display: none;
+// .visited-sights__input
+//   display: none;
 
 .visited-sights__input:checked + .visited-sights__label::before
   background-image: url("../img/icon-tick.svg");
@@ -38,10 +38,11 @@
   background-color: #f2f2f2;
   background-position: center center;
 
-.visited-sights__item:hover .visited-sights__label::before,
-.visited-sights__item:focus .visited-sights__label::before
+.visited-sights__item:hover .visited-sights__label::before
   background-color: #e5e5e5;
 
+.visited-sights__input:focus + .visited-sights__label::before
+  background-color: #e5e5e5;
 
 .visited-sights__item:active .visited-sights__label::before
   background-color: #d5d5d5;
